# eyes

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  README.md  README_zh.md  eyes-linux.spec  eyes.spec  index.html  main.py  package-lock.json  package.json  pyproject.toml  vite.config.ts
.claude/PRPs/reviews/: issue-31-review.md
.github/workflows/: linux-build.yml
docs/: m4a-spike-procedure.md  migration-plan.md
docs/adr/: 0001-detect-yaw-and-roll-only.md  0002-cumulative-time-timers.md  0003-mediapipe-for-head-pose.md  0004-custom-floating-window-over-os-toast.md  0005-rust-rewrite-direction.md  0006-pitch-as-independent-axis.md  0007-onnx-detector-choice.md  0008-onnx-detector-decomposition.md
docs/agents/: domain.md
docs/legacy/: README-python.md  README_zh-python.md
docs/prd/: rust-rewrite.md
models/: MANIFEST.toml
scripts/: build-linux.py  build-windows.cmd  build.py
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: app_state.rs  commands.rs  lib.rs  main.rs  worker_setup.rs
src-tauri/src/app_shell/: contract.rs  desktop.rs  events.rs  mod.rs
src-tauri/src/commands/: worker_command.rs
src-tauri/src/domain/: calibration.rs  classifier.rs  config.rs  defaults.rs  display_plan.rs  event_log.rs  mod.rs  posture_tick_engine.rs  snooze.rs
src-tauri/src/monitoring/: camera_enumerator.rs  channel.rs  detector.rs  event_mapping.rs  events.rs  linalg3.rs  mod.rs  onnx_detector.rs  opencv_camera.rs  orchestrator.rs  preview.rs  solve_pnp.rs  worker.rs  worker_loop.rs
src-tauri/src/monitoring/win32/: directshow_ffi.rs  mod.rs
src-tauri/tests/: calibration_behavior.rs  classifier_behavior.rs  config_store_behavior.rs  detector_behavior.rs  display_plan_behavior.rs  event_log_behavior.rs  monitoring_pipeline_behavior.rs  monitoring_preview_behavior.rs  posture_tick_engine_behavior.rs  snooze_behavior.rs
src/bindings/: AppConfig.ts  CameraDevice.ts
src/components/: Calibration.tsx  Settings.tsx
src/eyes/: __init__.py  accumulator.py  autostart.py  calibration.py  calibration_view.py  camera.py  camera_selector.py  classifier.py  config_store.py  controller.py  detector.py  display_plan.py  event_log.py  facing_time_accumulator.py  head_pose_geometry.py  i18n.py  icon_factory.py  main_window.py  main_window_renderer.py  monitoring_loop.py  overlay.py  platform_shell.py  posture_tick_engine.py  presence_time_accumulator.py  runtime_timings.py  sense_event_bus.py  sense_loop.py  settings_bridge.py  settings_dialog.py  snooze_evaluation.py  snooze_manager.py  tray_controller.py  types.py  vision_input.py
src/i18n/: en.ts  index.tsx  zh.ts
tests/: manual_pose_check.py  test_accumulator.py  test_autostart.py  test_calibration.py  test_calibration_view.py  test_camera.py  test_camera_selector.py  test_classifier.py  test_config_store.py  test_controller.py  test_detector.py  test_display_plan.py  test_event_log.py  test_facing_time_accumulator.py  test_head_pose_geometry.py  test_i18n.py  test_i18n_lifecycle.py  test_icon_factory.py  test_linux_packaging.py  test_main_window.py  test_main_window_renderer.py  test_monitoring_loop.py  test_overlay.py  test_packaging.py  test_platform_shell.py  test_posture_tick_engine.py  test_presence_time_accumulator.py  test_runtime_timings.py  test_sense_event_bus.py  test_sense_loop.py  test_settings.py  test_settings_bridge.py  test_snooze_evaluation.py  test_snooze_manager.py  test_translator.py  test_tray_controller.py  test_types.py  test_vision_input.py  test_warning_banner.py
tests/fixtures/frames/: __init__.py
