[project]
name = "eyes"
version = "0.1.0"
description = "Head-pose monitoring desktop app with webcam-based posture and eye-rest nudges"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mediapipe>=0.10.9",
    "PySide6>=6.6.0",
    "opencv-python>=4.9.0",
    "platformdirs>=4.2.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["eyes"]
omit = ["tests/*", "*/__main__.py"]

[tool.coverage.report]
show_missing = true
