[package]
name = "eyes"
version = "0.1.0"
edition = "2021"

[lib]
name = "eyes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []
opencv-camera = ["dep:opencv"]

[dependencies]
base64 = "0.22"
png = "0.17"
opencv = { version = "0.96", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
dirs = "6"

[dev-dependencies]
tempfile = "3"
