[package]
name = "eyes"
version = "0.2.0"
edition = "2021"
default-run = "eyes"

[lib]
name = "eyes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["opencv-camera", "onnx-detector"]
opencv-camera = ["dep:opencv"]
onnx-detector = ["dep:ort", "dep:nalgebra"]

[dependencies]
base64 = "0.22"
png = "0.17"
opencv = { version = "0.99", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tauri = { version = "2", features = ["tray-icon"] }
ts-rs = { version = "12", features = ["serde-compat"] }
tauri-plugin-single-instance = "2"
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
dirs = "6"
ort = { version = "=2.0.0-rc.12", optional = true }
nalgebra = { version = "0.33", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell_PropertiesSystem",
] }

[[bin]]
name = "yunet_probe"
path = "src/bin/yunet_probe.rs"
required-features = ["onnx-detector"]

[[bin]]
name = "yunet_camera"
path = "src/bin/yunet_camera.rs"
required-features = ["onnx-detector"]

[dev-dependencies]
tempfile = "3"
